// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-export-Regression in export to better biblatex #1491-sentencecase=on+guess+caseprotection=as-needed.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "D.",
            "lastName": "Mateescu",
          },
          Object {
            "firstName": "M.P.",
            "lastName": "Paı̈doussis",
          },
          Object {
            "firstName": "F.",
            "lastName": "Belanger",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Mateescu, D.",
          "Paı̈doussis, M.P.",
          "Belanger, F.",
        ],
        "date": Array [
          "1994-07",
        ],
        "doi": Array [
          "10.1006/jfls.1994.1024",
        ],
        "issn": Array [
          "08899746",
        ],
        "journaltitle": Array [
          "Journal of Fluids and Structures",
        ],
        "langid": Array [
          "english",
        ],
        "number": Array [
          "5",
        ],
        "pages": Array [
          "489–507",
        ],
        "shortjournal": Array [
          "Journal of Fluids and Structures",
        ],
        "shorttitle": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I",
        ],
        "title": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I: Computational Solutions Based on a Time-Integration Method",
        ],
        "url": Array [
          "https://linkinghub.elsevier.com/retrieve/pii/S0889974684710243",
        ],
        "urldate": Array [
          "2020-03-09",
        ],
        "volume": Array [
          "8",
        ],
      },
      "key": "mateescu_unsteady_1994",
      "type": "article",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`export Regression in export to better biblatex #1491.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "D.",
            "lastName": "Mateescu",
          },
          Object {
            "firstName": "M.P.",
            "lastName": "Paı̈doussis",
          },
          Object {
            "firstName": "F.",
            "lastName": "Belanger",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Mateescu, D.",
          "Paı̈doussis, M.P.",
          "Belanger, F.",
        ],
        "date": Array [
          "1994-07",
        ],
        "doi": Array [
          "10.1006/jfls.1994.1024",
        ],
        "issn": Array [
          "08899746",
        ],
        "journaltitle": Array [
          "Journal of Fluids and Structures",
        ],
        "langid": Array [
          "english",
        ],
        "number": Array [
          "5",
        ],
        "pages": Array [
          "489–507",
        ],
        "shortjournal": Array [
          "Journal of Fluids and Structures",
        ],
        "shorttitle": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I",
        ],
        "title": Array [
          "Unsteady Annular Viscous Flows Between Oscillating Cylinders. Part I: Computational Solutions Based on a Time-Integration Method",
        ],
        "url": Array [
          "https://linkinghub.elsevier.com/retrieve/pii/S0889974684710243",
        ],
        "urldate": Array [
          "2020-03-09",
        ],
        "volume": Array [
          "8",
        ],
      },
      "key": "mateescu_unsteady_1994",
      "type": "article",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
